--- a/src/components/header.css
+++ b/src/components/header.css
@@ -3,6 +3,18 @@
     width: 100%;
     padding: 50px 0;
     z-index: 100;
+    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1.0);
+}
+
+.HeaderScrolled {
+    background: whitesmoke;
+    padding: 15px 0;
+    backdrop-filter: blur(20px);
+}
+
+.Header a {
+    color: rgba(166, 104, 81, 100);
+    font-weight: 700;
 }
 
 .HeaderGroup {
@@ -15,11 +27,6 @@
     justify-items: center;
 }
 
-.Header a {
-    color: rgba(166, 104, 81, 100);
-    font-weight: 700;
-}
-
 .Header button {
     padding: 8px 20px;
     font-size: 20px;
@@ -30,6 +37,14 @@
     font-weight: 700;
     outline: none;
     cursor: pointer;
+    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1.0);
+}
+
+.Header button:hover {
+    background: white;
+    color: black;
+    box-shadow: 0 10px 20px rgba(0,0,0, 0.25);
+    transform: translateY(-3px);
 }
 
 @media (max-width: 640px) {
@@ -45,3 +60,4 @@
         display: none;
     }
 }
+
